<resources>
    <string name="app_name">ProfiTrackr</string>
    <string name="retry">Retry</string>
    <string name="buy_sell">Trade</string>
    <string name="date">Date</string>
    <string name="lot">Lot</string>
    <string name="price">Price</string>
    <string name="cost">Cost</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="add_stock">Add Stock</string>
    <string name="sort_by_symbol">Sort by symbol</string>
    <string name="sort_by_date_created">Sort by date created</string>
    <string name="add_new_stock_trade">Add New Stock</string>
    <string name="stock_trade_history">Stock Trade History</string>
    <string name="symbol">Symbol</string>
    <string name="select_stock">select stock</string>
    <string name="edit_stock_trade">Edit Stock</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
</resources>